fix: visibility-hidden을 유틸리티로 변경

--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,14 @@
     @apply bg-[#0071e3] text-white rounded-[980px] cursor-pointer inline-block whitespace-nowrap;
   }
 
-  .hidden {
-    @apply absolute w-[1px] h-[1px] p-0 m-[-1px] overflow-hidden whitespace-nowrap border-0;
-    clip: rect(0, 0, 0, 0) !important;
-  }
-
   .focus {
     @apply transition-opacity opacity-80 hover:opacity-100 hover:transition-opacity hover:transition active:opacity-100 active:transition-opacity active:transition;
+  }
+}
+
+@layer utilities {
+  .visibility-hidden {
+    @apply absolute w-[1px] h-[1px] p-0 m-[-1px] overflow-hidden whitespace-nowrap border-0;
+    clip: rect(0, 0, 0, 0) !important;
   }
 }
